--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.mccourse.alexandrite":     "Alexandrite",
   "item.mccourse.raw_alexandrite": "Raw Alexandrite",
   "item.mccourse.metal_detector": "Metal Detector",
+  "item.mccourse.kohlrabi": "Kohlrabi",
 
   "block.mccourse.alexandrite_block": "Alexandrite Block",
   "block.mccourse.alexandrite_ore":   "Alexandrite Ore",
