--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.mccourse.raw_alexandrite": "Raw Alexandrite",
   "item.mccourse.metal_detector": "Metal Detector",
   "item.mccourse.kohlrabi": "Kohlrabi",
+  "item.mccourse.peat_brick": "Peat Brick",
 
   "block.mccourse.alexandrite_block": "Alexandrite Block",
   "block.mccourse.alexandrite_ore":   "Alexandrite Ore",
@@ -12,6 +13,11 @@
   "block.mccourse.nether_alexandrite_ore":   "Nether Alexandrite Ore",
 
   "creativetab.course_tab": "Course Tab",
+
+  "tooltip.mccourse.metal_detector.shift": "Right Click on Blocks to find Valuables",
+  "tooltip.mccourse.metal_detector": "For more Information hold §eShift§r",
+  "tooltip.mccourse.sound_block.tooltip": "Plays nice sounds when walking or right-clicking",
+
 
   "item.mccourse.metal_detector.no_valuables": " No Valuables Detected"
 }
