--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -11,6 +11,8 @@
   "block.mccourse.deepslate_alexandrite_ore":   "Deepslate Alexandrite Ore",
   "block.mccourse.end_stone_alexandrite_ore":   "End Stone Alexandrite Ore",
   "block.mccourse.nether_alexandrite_ore":   "Nether Alexandrite Ore",
+  "block.mccourse.alexandrite_stairs":   "Alexandrite Stairs",
+  "block.mccourse.Alexandrite_slab":   "Alexandrite Slab",
 
   "creativetab.course_tab": "Course Tab",
 
