--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -15,6 +15,9 @@
   "block.mccourse.alexandrite_slab":   "Alexandrite Slab",
   "block.mccourse.alexandrite_pressure_plate":   "Alexandrite Pressure Plate",
   "block.mccourse.alexandrite_button":   "Alexandrite Button",
+  "block.mccourse.alexandrite_fence":   "Alexandrite Fence",
+  "block.mccourse.alexandrite_fence_gate":   "Alexandrite Fence Gate",
+  "block.mccourse.alexandrite_wall":   "Alexandrite Wall",
 
   "creativetab.course_tab": "Course Tab",
 
